<resources>
    <string name="app_name">Marksy</string>
    <string name="mark_weighting">x%1$.2f</string>
    <string name="add_mark">Add Mark</string>
    <string name="mark_must">Mark*</string>
    <string name="weighting_must">Weighting*</string>
    <string name="weighting_default_1_0">1.0</string>
    <string name="name_must">Name*</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="add_mark_image">Add Mark</string>
    <string name="formatted_date">%s</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="subject">Subject</string>
    <string name="subject_must">Subject*</string>
    <string name="subject_header">%s: %.2f -> %.1f</string>
</resources>